
Wed Sep 22 17:55:48 PDT 1999
(KainX)

Added a "query" command to the imageclass IPC.  This is for an Eterm
feature.

-------------------------------------------------------------------------------

Wed Sep 22 18:21:40 PDT 1999
(KainX)

Ergh...let's not go freeing image classes willy-nilly, shall we?

-------------------------------------------------------------------------------

Wed Sep 22 20:07:31 PDT 1999
(Raster)

disabel pagers and icobnoxes form going into groups - ok theres a bug 
restoring them and i've had enough of looking at that code.. so i simply
disabled it. much simpler.

-------------------------------------------------------------------------------

Wed Sep 22 20:17:22 PDT 1999
(Raster)

get rid of printf.......

-------------------------------------------------------------------------------

Thu Sep 23 16:46:10 EST 1999
(Christian)

Ok, groups behave inconsistent if you use them over
multiple desktops and via the titlebar or the menu,
so group effects are limited to the current desktop
for now.


-------------------------------------------------------------------------------

Thu Sep 23 14:40:50 PDT 1999
(KainX)

Woops.  Width and height of 0 doesn't make for a happy pixmap.  Let
E figure it out.  This fixes Eterm's auto mode.

-------------------------------------------------------------------------------

Thu Sep 23 14:52:38 PDT 1999
(Raster)

ok- theres a memeory leak if you use color modifiers in yout theme.. and thus
color modifiers have been disabled - spent too many hours looking for the leak
and cannot find it anywhere.

-------------------------------------------------------------------------------

Thu Sep 23 14:55:59 PDT 1999
(Raster)

and dont save colro modifiers in the user config anymore since they have been 
disabled

-------------------------------------------------------------------------------

Thu Sep 23 14:57:35 PDT 1999
(Raster)

get the end of comment thing right :)